quarantine registration menu for county teams

--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -345,6 +345,7 @@
           <li>
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-clipboard fa-stack-1x "></i></span>JITENGE REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
+                  <li><a href="/quarantine_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>Quarantine Registration</a></li>
                   <li><a href="/quarantine_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Self Quarantine List</a></li>
                   <li><a href="/follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Quarantine FollowUp</a></li>
                   <li><a href="/symptomatic_cases"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
@@ -413,6 +414,7 @@
           <li>
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-clipboard fa-stack-1x "></i></span>JITENGE REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
+                  <li><a href="/quarantine_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>Quarantine Registration</a></li>
                   <li><a href="/quarantine_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Self Quarantine List</a></li>
                   <li><a href="/follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Quarantine Followup</a></li>
                   <li><a href="/symptomatic_cases"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
