--- a/veoc/templates/veoc/truck_quarantine_contacts.html
+++ b/veoc/templates/veoc/truck_quarantine_contacts.html
@@ -1,108 +1,70 @@
-<head>
-  <style>
-table.dataTable tbody>tr.selected,
-table.dataTable tbody>tr>.selected {
-  background-color: #A2D3F6;
-}
-</style>
+  {% extends "veoc/main_template.html" %}
 
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css">
-<link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
-</head>
-<body>
-
+  {% block main %}
   <div class="container">
-  <table cellpadding="0" cellspacing="0" border="0" class="dataTable table table-striped" id="example">
+    <div class="row">
+      <div class="col-sm-12">
+        <table id="albums" class="table table-striped table-bordered" style="width:100%">
+          <thead>
+            <tr>
+              <th>Last Name</th>
+              <th>First Name</th>
+              <th>Age</th>
+              <th>Gender</th>
+              <th>Mobile Number</th>
+              <th>Passport/ID Number</th>
+              <th>Nationality</th>
+              <th>Origin Country</th>
+              <th>Border Point</th>
+              <th>Enrollement Date</th>
+              <th>Registered By</th>
+              <th>Map View</th>
+              <th>View Profile</th>
 
-  </table>
-</div>
+            </tr>
+          </thead>
+        </table>
+      </div>
+    </div>
+  </div>
+  {% endblock %}
 
+  {% block script %}
+  <script src="https://code.jquery.com/jquery-3.4.1.js" type="text/javascript"></script>
+     <script src="https://code.jquery.com/jquery-3.4.1.min.js" type="text/javascript"></script>
+      <script src="https://code.jquery.com/ui/jquery-ui-git.js" type="text/javascript"></script>
+     <link href="https://code.jquery.com/ui/jquery-ui-git.css" rel="Stylesheet" type="text/css" />
 
-  <script src="//code.jquery.com/jquery-1.12.4.js"></script>
-   <script src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-   <script src="//cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+  <script type="text/javascript"
+      src="https://cdn.datatables.net/v/dt/jqc-1.12.3/jszip-2.5.0/pdfmake-0.1.18/dt-1.10.12/b-1.2.2/b-flash-1.2.2/b-html5-1.2.2/b-print-1.2.2/datatables.min.js"></script>
+
   <script>
-    $(document).ready(function() {
+      $(document).ready(function() {
+          var table = $('#albums').DataTable({
+            "order": [],
+            dom: 'Bfrtip',
+            buttons: [
+                'copy', 'csv', 'excel', 'pdf', 'print'
+            ],
+              "serverSide": true,
+              "ajax": "/api/truck_quarantine_contacts/?format=datatables",
+              "columns": [
+                  {"data": "patient_contacts.last_name"},
+                  {"data": "patient_contacts.first_name"},
+                  {"data": "patient_contacts.sex"},
+                  {"data": "patient_contacts.sex"},
+                  {"data": "patient_contacts.phone_number"},
+                  {"data": "patient_contacts.passport_number"},
+                  {"data": "patient_contacts.nationality"},
+                  {"data": "patient_contacts.origin_country"},
+                  {"data": "border_point.border_name"},
+                  {"data": "patient_contacts.first_name"},
+                  {"data": "patient_contacts.first_name"},
+                  {"data": "patient_contacts.truck_info", "searchable": false"},
+                  {"data": "patient_contacts.truck_prof", "searchable": false},
 
-let json = [
-{"id":8,"street":"","village":"","vehicle_registration":"KBV905G","company_name":"MULTIPE HALIERS","company_phone":"","company_physical_address":"NAIROBI, INDUSTRIAL AREA","company_street":"EMBAKASI","company_building":"","cough":false,"breathing_difficulty":false,"fever":false,"sample_taken":false,"action_taken":"ALLOWED TO PROCEED"},
-{"id":8,"street":"","village":"","vehicle_registration":"KBV905G","company_name":"MULTIPE HALIERS","company_phone":"","company_physical_address":"NAIROBI, INDUSTRIAL AREA","company_street":"EMBAKASI","company_building":"","cough":false,"breathing_difficulty":false,"fever":false,"sample_taken":false,"action_taken":"ALLOWED TO PROCEED"}
-];
-
-var columnDefs = [
-{
-  data: "id"
-},
-{
-  data: "street"
-},
-{
-  data: "village"
-},
-{
-  data: "vehicle_registration"
-},
-{
-  data: "company_name"
-},
-{
-  data: "company_phone"
-},
-{
-  data: "company_physical_address"
-},
-{
-  data: "company_street"
-},
-{
-  data: "company_building"
-},
-{
-  data: "cough"
-},
-{
-  data: "breathing_difficulty"
-},
-{
-  data: "fever"
-},{
-  data: "sample_taken"
-},{
-  data: "action_taken"
-}];
-
-var myTable;
-$.ajax({
-  url: '/api/truck_quarantine_contacts/',//simulate ajax
-  type: 'GET',
-  dataType: 'JSON',
-  data: {json:JSON.stringify(json)}
-}).done((response)=>{
-   myTable = $('#example').DataTable({
-  "sPaginationType": "full_numbers",
-  data: response,
-  columns: columnDefs,
-  responsive: true,
-  columnDefs: [
-          {"className": "dt-center", "targets": "_all"},
-          {
-            "targets": [ 2 ],
-            "visible": false,
-            "searchable": false
-          }
-          ]
-});
-
-  var filteredData =  myTable
-  .rows()
-  .indexes()
-  .filter( function ( value, index ) {
-  console.log(myTable.row(value).data().Status);
-     return myTable.row(value).data().Status === "Taken";
-  } );
-myTable.rows( filteredData )
-.remove()
-.draw();
-});
-});
+              ]
+          });
+      });
   </script>
+{% endblock %}
